prover-ray/zkcdriver/testdata/synced/invalid/for_02.zkc
//error:4:9-12:unknown type alias
fn f(x:u8) -> (r:u8) {
  r = 0
  for i:int = 0; i < x; i = i + 1 {
    r = r + 1
  }
  return
}
